Added initial information

--- a/index.qmd
+++ b/index.qmd
@@ -1,11 +1,9 @@
 ---
-title: "felipelfv.github.io"
+title: "Felipe Fontana Vieira"
+about: 
+  template: jolla
 ---
+        
+# page content excluded for brevity ~
 
-This is a Quarto website.
-
-To learn more about Quarto websites visit <https://quarto.org/docs/websites>.
-
-```{r}
-1 + 1
-```
+I’m a PhD student in statistical data analysis at G(h)ent University. My main research is about latent interactions. More specifically, I’m involved with the "structural-after-measurement" (SAM) approach and its extensions in the context of nonlinear effects. My advisor is Prof. Yves Rosseel (yes, the lavaan guy). Besides this, I’m also a co-lead together with some wonderful people for one team at Framework for Open and Reproducible Research Training (FORRT).
