--- a/about.qmd
+++ b/about.qmd
@@ -1,9 +1,11 @@
 ---
-title: "About"
+title: "Education"
 ---
 
-About this site
+- 2024-*present* \| PhD Research in Statistical Data Analysis, Department of Data-Analysis, Faculty of Psychology and Educational Sciences, Ghent University
 
-```{r}
-1 + 1
-```
+- 2023-*present* \| Subsequent Master's degree in Statistical Data Analysis (M.Sc.), Faculty of Science, Ghent University. 
+
+- 2021-2023 \| Master's degree in Psychology (Theory and Research) (M.Sc.), Faculty of Psychology and Educational Sciences, KU Leuven.
+
+- 2018-2021 \| Bachelor's degree in Psychology, Faculty of Psychology and Educational Sciences, University of Coimbra.
