--- a/about.qmd
+++ b/about.qmd
@@ -28,10 +28,10 @@ title: "Curriculum vitae"
 
 ## Poster Presentations and Talks
 
-- \textbf{Vieira, F. F.}. A Gentle Introduction to Structural Equation Modeling (Invited talk). Faculty of Education, Cambridge University, February 10th, 2025.
+- **Vieira, F. F.**. A Gentle Introduction to Structural Equation Modeling (Invited talk). Faculty of Education, Cambridge University, February 10th, 2025.
 
-- \textbf{Vieira, F. F.} (presenting author), Jasini, A., Tekin E. A., \& Mesquita, B. (2023). Majorities’ emotions acculturate too: The role of intergroup friendships and clarity of minority emotion norms. Poster presented at the ASPO 2023, Utrecht, Netherlands, April 20th-21st, 2023.
+- **Vieira, F. F.** (presenting author), Jasini, A., Tekin E. A., \& Mesquita, B. (2023). Majorities’ emotions acculturate too: The role of intergroup friendships and clarity of minority emotion norms. Poster presented at the ASPO 2023, Utrecht, Netherlands, April 20th-21st, 2023.
 
-- Costantino, A., Van Hove, L. (presenting author), \textbf{Vieira F. F.}, \& Op de Beeck, H. (2023). Does expertise affect the geometry of object representations in the brain?. Poster presented at the BAPS 2023, Mons, Belgium, May 25th-26th, 2023.
+- Costantino, A., Van Hove, L. (presenting author), **Vieira, F. F.**, \& Op de Beeck, H. (2023). Does expertise affect the geometry of object representations in the brain?. Poster presented at the BAPS 2023, Mons, Belgium, May 25th-26th, 2023.
 
 
