--- a/about.qmd
+++ b/about.qmd
@@ -12,7 +12,7 @@ title: "Curriculum vitae"
 
 -   2018-2021 \| Bachelor's degree in Psychology, Faculty of Psychology and Educational Sciences, University of Coimbra.
 
-## Work and Research experience
+## Work and Research Experience
 
 -   2024-*present* \| PhD Researcher in Statistical Data Analysis, Department of Data-Analysis, Faculty of Psychology and Educational Sciences, Ghent University.
 
