--- a/index.qmd
+++ b/index.qmd
@@ -7,12 +7,15 @@ about:
   image-shape: round
   image-width: 18em
   links:
-    - text: LinkedIn
+    - icon: linkedin
+      text: LinkedIn
       href: https://www.linkedin.com/in/felipe-fontana-vieira-b00258200/
-    - text: GitHub
+    - icon: github
+      text: GitHub
       href: https://github.com/felipelfv
-    - text: Bluesky
-      href: https://bsky.app/profile/felipefv.bsky.social
+    - icon: envelope
+      text: Email
+      href: "mailto:felipe.fontanavieira@ugent.be"
 ---
 
 Hello! My name is Felipe. I’m a PhD student in statistical data analysis at G(h)ent University. My main research is about latent interactions. More specifically, I’m involved with the "structural-after-measurement" (SAM) approach and its extensions in the context of nonlinear effects. My supervisor is Prof. Yves Rosseel (yes, the lavaan guy). Besides that, I’m also a co-lead with some wonderful people for one team at Framework for Open and Reproducible Research Training (FORRT).
